Fix SameSite=None for cross-subdomain auth cookies (Vercel -> VPS API)
- AuthController.java: Set SameSite=None on access_token and refresh_token cookies
- frontend/lib/auth-cookie.ts: Set SameSite=None; Secure on manual cookie
- AuthCookieIntegrationTest.java: Updated assertions for SameSite=None

Fixes cross-subdomain cookie blocking on POST GraphQL requests from www.capitalfourge.com to api.capitalfourge.com